<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15px"
    tools:context="com.um.asn.i_spy.RegisterSlaveActivity">

    <EditText
        android:id="@+id/register_slave_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/phone_number"
        android:inputType="textPersonName"
        android:layout_marginBottom="11dp"
        android:layout_above="@+id/register_slave_password"
        android:layout_centerHorizontal="true" />

    <EditText
        android:id="@+id/register_slave_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/choose_password"
        android:inputType="textPassword"
        android:layout_centerVertical="true"
        android:layout_alignStart="@+id/register_slave_login" />

    <Button
        android:id="@+id/register_slave_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/save"
        android:layout_below="@+id/register_slave_password"
        android:layout_centerHorizontal="true" />
</RelativeLayout>
